adding margin between components

--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -3,5 +3,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 20rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
   
  }
+.banner-content {
+  text-align: center;
+  margin: 4rem;
+  color: #fff;
+  font-weight: 700;
+  text-shadow: 20%;
+}
