--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,7 +1,4 @@
-footer{
-  text-align: center;
-  padding: 4rem;
-  background-color:#f4f4f4 ; 
-  width: 100%;
+footer {
+  box-shadow: 0px -3px 6px 1px rgba(0, 0, 0, 0.2);
   
 }
