--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,24 +1,30 @@
-header{
- 
-  padding: 5px;
-}
-  .logo {
-  width: 8rem;
-}
-
-#searchbar {
-  margin-left: 15%;
-   padding: 4px;
-   border-radius: 10px;
- }
-
- input[type=text] {
-    width: 30%;
-    -webkit-transition: width 0.15s ease-in-out;
-    transition: width 0.15s ease-in-out;
- }
- .btn{
+.container-flex {
+  display: flex;
   
-  background-color: #0fb19e;
+}
+
+header {
+  box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.2);
+}
+
+.banner{
+  background-image:url("../../assets/images/books-banner.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height:20em !important;
+}
+
+.btn-connexion, .btn-inscription {
+  border-radius:0.5em;
   color: #fff;
- }
+  padding: 0.5em 1.2em;
+}
+
+.btn-connexion {
+  background-color: #14aa9a;
+  color: #fff;
+}
+
+.btn-inscription {
+  background-color: #ffb329;
+}
