--- a/src/components/HomeBook/styles.scss
+++ b/src/components/HomeBook/styles.scss
@@ -1,3 +1,8 @@
-.homebook{
-  margin-bottom: 2rem;
+.btn-book{
+  border-radius:0.5em;
+  color: #fff;
+  padding: 0.2em 1.2em;
+  background-color: #14aa9a;
+  display: block;
+
 }
