creation - profil page, register page, contact page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,7 +25,11 @@ body {
   color: #1f2344;
 }
 
-
+h2{
+  color:#00aa9a;
+  font-size:1.5em !important;
+  font-weight:600 !important;
+}
 
 /* top */
 .header__part {
