new form user connexion

--- a/src/components/FieldText/field.scss
+++ b/src/components/FieldText/field.scss
@@ -3,9 +3,9 @@
   margin: 2rem 0;
   position: relative;
 
-  &:not(:last-child) {
+  /*&:not(:last-child) {
     margin-bottom: 3.4rem;
-  }
+  }*/
 
   .label {
     display: block;
