fix bug scss connexion form

--- a/src/components/LoginForm/style.scss
+++ b/src/components/LoginForm/style.scss
@@ -23,7 +23,7 @@
     background-color: #14aa9a;
     border-radius: .3em;
     border: 0;
-   // padding: .7em;
-    height: 2.5em;
+   padding: .7em;
+    height: 3em;
   }
 }
