--- a/src/components/LoginForm/Field/style.scss
+++ b/src/components/LoginForm/Field/style.scss
@@ -1,8 +1,8 @@
 @use 'src/styles/vars';
 
 .field {
-  //margin: .3em .3em .3em 0;
-  //position: relative;
+margin: .3em .3em .3em 0;
+position: relative;
 
   
 
@@ -12,13 +12,14 @@
     font-size: 1em;
     border: 1px solid #ddd;
     border-radius: .3em;
-    height: 2.5em;
+    height: 3em;
+    
 
     &:focus {
       border-color:#fab334;
 
       & + .field-label {
-        color: #f1ebeb;
+        color: #aaaaaa;
       }
     }
   }
@@ -26,10 +27,9 @@
   &-label {
     display: none;
     position: absolute;
-    top: .2rem;
+    top: 0.1rem;
     left: .7rem;
-    color: #fff;
-    opacity: 0;
+    color: #949494;
 
     font-size: .7em;
     text-transform: uppercase;
@@ -41,6 +41,7 @@
     }
     .field-input {
       padding: 1.4em .7em .4em;
+      
     }
   }
 }
