--- a/src/components/Field/field.scss
+++ b/src/components/Field/field.scss
@@ -1,7 +1,7 @@
 @use  'src/styles/vars';
 .field {
-  margin: 2rem 0;
-  position: relative;
+  /*margin: 2rem 0;
+  position: relative;*/
 
   .label {
     display: block;
