--- a/src/components/FieldText/field.scss
+++ b/src/components/FieldText/field.scss
@@ -1,7 +1,7 @@
 @use  'src/styles/vars';
 .field {
-  margin: 2rem 0;
-  position: relative;
+  /*margin: 2rem 0;*/
+  /*position: relative;*/
 
   /*&:not(:last-child) {
     margin-bottom: 3.4rem;
