--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,4 +1,13 @@
 footer {
-  box-shadow: 0px -3px 6px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px -0.4em 1em 0 rgba(0, 0, 0, 0.2);
   
+}
+
+.navFooter{
+  font-weight:200;
+  color: #242746;
+}
+
+.navFooter:hover{
+  color:#fab334;
 }
