--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -5,14 +5,31 @@
 
 header {
   box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.2);
+  /*background-color:#e4e3dd;*/
+  background-color:#242746;
 }
 
-.banner{
-  background-image:url("../../assets/images/books-banner.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height:20em !important;
+.linkNav{
+  color:#fff;
+  padding:0.5em;
+  margin-left:0.8em;
+  font-weight:600;
+  display: block;
+  transition: all 0.2s;
 }
+
+.linkNav:hover{
+  color:#fff;
+  background:#ffb329;
+  transition: all 0.2s;
+  border-radius:0.3em;
+ 
+}
+
+.navbar-toggler{
+  background-color:#ffb329 !important;
+}
+
 
 .btn-connexion, .btn-inscription {
   border-radius:0.5em;
