--- a/src/components/HomeBook/styles.scss
+++ b/src/components/HomeBook/styles.scss
@@ -1,8 +1,13 @@
 .btn-book{
-  border-radius:0.5em;
   color: #fff;
   padding: 0.2em 1.2em;
   background-color: #14aa9a;
   display: block;
 
+}
+
+.btn-book:hover{
+  background:#ffb329;
+  transition: all 0.2s;
+  color:#fff;
 }
