--- a/src/components/LoginForm/Field/style.scss
+++ b/src/components/LoginForm/Field/style.scss
@@ -11,12 +11,14 @@ position: relative;
     padding: 1em;
     font-size: 1em;
     border: 1px solid #ddd;
-    border-radius: .3em;
+    border-radius: 1.2em;
+    
     height: 3em;
     
 
     &:focus {
       border-color:#fab334;
+      
 
       & + .field-label {
         color: #aaaaaa;
