filter bibliotheque and dynamisation of add book page in work

--- a/src/components/LoginForm/Field/style.scss
+++ b/src/components/LoginForm/Field/style.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/vars';
 
 .field {
-margin: .3em .3em .3em 0;
+margin: 2.3em .3em .3em 0;
 position: relative;
 
   
@@ -11,7 +11,7 @@ position: relative;
     padding: 1em;
     font-size: 1em;
     border: 1px solid #ddd;
-    border-radius: 1.2em;
+    border-radius: 0.6em;
     
     height: 3em;
     
