add form and tabs css

--- a/src/components/Pages/Book/styles.scss
+++ b/src/components/Pages/Book/styles.scss
@@ -1,4 +1,4 @@
-.book-content {
+.book-synopsy {
 }
 
 .book-image{
@@ -7,9 +7,7 @@
 
 }
 .book-title {
-  margin-top: 2rem;
   margin-bottom: 2rem;
-  font-size: xx-large;
 }
 .book-author {
   margin-top: 2rem;
