--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -5,8 +5,13 @@
  /* height:20em !important;*/
 }
 .card-content{
-  color:#fff;
   padding:2em;
+}
+
+.banner .card-text{
+   font-weight: 600;
+   color:#fff;
+  
 }
 
 .titleHome{
