--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -83,7 +83,8 @@ h2{
 .submenu__item--current {
   border-bottom: 2px solid #666;
 }
-
-
-
-
+.error {
+  color: red;
+  font-size: 0.8rem;
+  font-family: sans-serif;
+}
