fix bug validation with errorMessage

--- a/src/components/Pages/Book/styles.scss
+++ b/src/components/Pages/Book/styles.scss
@@ -1,6 +1,11 @@
 .book-synopsy {
 }
 
+.bookTab h5{
+  border-bottom:.1em solid #ccc;
+  padding-bottom:0.5em;
+  margin-bottom:1em;
+}
 .book-image{
   margin-bottom: 3rem ;
   border:.1em solid #ccc;
