--- a/src/components/Pages/Book/styles.scss
+++ b/src/components/Pages/Book/styles.scss
@@ -1,9 +1,9 @@
+.colInfoRight, .colInfoLeft{
+  margin-top:3em !important;
+}
 
-
-.bookTab h5{
-  border-bottom:.1em solid #ccc;
-  padding-bottom:0.5em;
-  margin-bottom:1em;
+.bookTab{
+  border-top:.1em solid #ccc;
 }
 
 .book-image{
