div info for the ISBN and some error

--- a/src/components/Pages/User/styles.scss
+++ b/src/components/Pages/User/styles.scss
@@ -2,6 +2,7 @@
     width:150px;
     height: auto;
     margin-top:2em;
+    
   }
   
   .userProfil{
@@ -12,6 +13,7 @@
 
 .userProfil .btn{
     margin-top:1em;
+    margin-right :1em;
 }
 
 .userRow{
