css user profil

--- a/src/components/Pages/User/styles.scss
+++ b/src/components/Pages/User/styles.scss
@@ -26,3 +26,13 @@ input,
 label {
   margin: 0.4rem 0;
 }
+
+.linkPassword{
+  color: #ffbb00;
+  padding-top:2em;
+  font-weight:500;
+}
+
+.linkPassword:hover{
+  color:#242746;
+}
