--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -46,7 +46,8 @@ header {
   background-color: #ffb329;
 }
 
-.imgAvatar img{
+.imgAvatar{
   width:4em;
+  clip-path:ellipse(50% 50%);
   margin-right:1em;
 }
