fix bug css mobile version

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,6 +37,12 @@ h2{
   font-weight:600 !important;
 }
 
+h3{
+  
+  font-size:1.2em !important;
+  font-weight:600 !important;
+}
+
 /* top */
 .header__part {
   border-bottom: var(--border-normal);
