--- a/src/components/HomeBook/styles.scss
+++ b/src/components/HomeBook/styles.scss
@@ -3,6 +3,9 @@
   padding: 0.2em 1.2em;
   background-color: #14aa9a;
   display: block;
+ text-overflow: ellipsis;
+ white-space: nowrap;
+ overflow: hidden;
 
 }
 
